--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MindTrack</title>
+    <title>Mind Anchor</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body background="backg.png" justify-items="center"> >
@@ -27,3 +27,4 @@
 </body>
 
 </html>
+
